@@ -1,0 +1,3 @@
+Interface to the 'libgit2' library, which is a pure C implementation
+of the 'Git' core methods. Provides access to 'Git' repositories to
+extract data and running some basic 'Git' commands.
