@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:37:22 brook Exp $
+
+R_PKGNAME=	git2r
+R_PKGVER=	0.26.1
+CATEGORIES=	devel
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Provides access to Git repositories
+LICENSE=	gnu-gpl-v2
+
+USE_LANGUAGES=	c
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
