@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3353 2019/08/09 18:36:28 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3354 2019/08/09 18:37:22 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5476,3 +5476,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added devel/R-sessioninfo version 1.1.1 [brook 2019-08-09]
 	Added devel/R-rprojroot version 1.3.2 [brook 2019-08-09]
 	Added sysutils/R-sys version 3.2 [brook 2019-08-09]
+	Added devel/R-git2r version 0.26.1 [brook 2019-08-09]
